# Quick-OpenAI-Insights

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_unversioned.txt  setup.cfg  test.ipynb  todo.md
.devcontainer/: devcontainer.json
.streamlit/: config.toml
dashboard/: 1_YouTube_Video_Analytics.py
dashboard/pages/: 1_PA_AI_Teams_Call.py  3_About.py  About.py
data/final/: downsampled_output.xlsx  output_teams.json  output_teams.xlsx  v1output.json  v2output.json  v2output.xlsx  v3output.json  v3output.xlsx  v4output.json  v4output.xlsx
data/raw/: Artificial Intelligence in Immigration - Initial Views.vtt  HMRC DALAS Transcript Raw.txt
docs/: approach.md
notebooks/: README.md  functions_test.ipynb  openai-playground.ipynb  test.ipynb  textract.ipynb
src/: main.py  openai_embeddings.py  openai_prompt_engine.py  openai_prompt_engine_func.py  orchestrate.py  preprocess.py  streamlitdemo.py
src/prompt_templates/: prompt_v1.j2  prompt_v2.j2  prompt_v3.j2
src/unused/: openai_embeddings.py
src/utils/: common.py
