[project]
name = "quick-openai-insights"
version = "0.1.0"
description = ""
authors = [{ name = "Rory Scott", email = "7805169+rorads@users.noreply.github.com" }]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "pandas>=2.2.0,<3",
    "textract>=1.6.5,<2",
    "streamlit>=1.30.0,<2",
    "altair>=5.2.0,<6",
    "seaborn>=0.13.2,<0.14",
    "matplotlib>=3.8.2,<4",
    "wordcloud>=1.9.3,<2",
    "streamlit-aggrid>=0.3.4.post3,<0.4",
    "marimo>=0.1.88,<0.2",
    "python-dotenv>=1.0.1,<2",
    "regex>=2023.12.25,<2024",
    "six>=1.12.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.0,<7"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
