[metadata]
name = Insights
version = 1.0.0
author = Rory Scott
description = Open AI Insights
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir = 
    = src
packages = find:
python_requires = ==3.10.*

[options.packages.find]
where = src

[flake8]
max_line_length = 120
ignore = 
    = E402 # module level import not at top of file
    = C0103 # invalid name
    = W0108 # lambda may not be necessary